criação do header junto com meu colega murilo

--- a/EPTRAN_INICIO/index/index.html
+++ b/EPTRAN_INICIO/index/index.html
@@ -9,19 +9,31 @@
 <body>
     <header>
     <section id="sec">
-        <div>
-        <img id="imag" src="../css/img/Logo Prefeitura.png">
+        <div id="menu">
+            <img src="../css/img/menu.png" style="max-width: 46px;">
         </div>
-        <div>
-        <button id="menu" type="button" href="index2.html" aria-label="Teste botao">
-            <img src="../css/img/botao menu.png"  style="widht:80px; height:80px;">
-        </button>
+        <div id="eptran">
+            <h1>EPTRAN</h1>
         </div>
-        <div>
-        <h1 id="titulo">EPTRAN</h1>
-        <hr>
+        <div id="logopref">
+            <img src="../css/img/Logo Prefeitura.png">
         </div>
     </section>
     </header>
+    <section id="linhainicio">
+    <div id="int">
+            <p>
+                Ínicio
+            </p>
+    </div>
+    </section>
+    <section>
+    <div id="title">
+        <h1>
+            EDUCAÇÃO PÚBLICA AO TRÂNSITO
+            <img src="../css/img/" alt="">  
+        </h1>
+    </div>
+    </section>
 </body>
 </html>
