--- a/EptranInicio/estruturaEptranInicio/index.html
+++ b/EptranInicio/estruturaEptranInicio/index.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EPTRAN</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../visualEptranInicio/geralEptranInicio/style.css">
 </head>
 <body>
     <header>
     <section id="sec">
         <div id="menu">
-            <img src="../css/img/menu.png" style="max-width: 46px;">
+            <img src="../visualEptranInicio/imagensEptranInicio/menu.png" style="max-width: 46px;">
         </div>
         <div id="eptran">
             <h1>EPTRAN</h1>
         </div>
         <div id="logopref">
-            <img src="../css/img/Logo Prefeitura.png">
+            <img src="../visualEptranInicio/imagensEptranInicio/Logo Prefeitura.png" style="max-height: 46px;">
         </div>
     </section>
     </header>
     <section id="linhainicio">
     <div id="int">
             <p>
-                Ínicio
+                Início
             </p>
     </div>
     </section>
@@ -31,7 +31,6 @@
     <div id="title">
         <h1>
             EDUCAÇÃO PÚBLICA AO TRÂNSITO
-            <img src="../css/img/" alt="">  
         </h1>
     </div>
     </section>
