--- a/estruturas/cadastro.html
+++ b/estruturas/cadastro.html
@@ -2,9 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Cadastro/visualCadastro/geralCadastro/1.css">
+    <link rel="stylesheet" href="/styles/cadastro.css">
     <title>Atividade Login</title>
-    <script src="/scriptLogin/scriptLogin.js"></script>
+    <script src="/scripts/cadastro.js"></script>
 </head>
 <body>
     <div>
@@ -14,7 +14,7 @@
             <div class="login-box">
                 <form>
                     <div id="foto">
-                        <img src="/Login/visualLogin/imagensLogin/cara.png" alt="">
+                        <img src="/styles/imagens/Cara.png" alt="">
                         <p id="cadastro">Cadastro</p>
                     </div>
                     <div class="user-box">
