--- a/estruturas/inicio.html
+++ b/estruturas/inicio.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EPTRAN</title>
-    <link rel="stylesheet" href="../visualEptranInicio/geralEptranInicio/style.css">
+    <link rel="stylesheet" href="/styles/inicio.css">
 </head>
 <body>
     <header>
     <section id="sec">
         <div id="menu">
-            <img src="../visualEptranInicio/imagensEptranInicio/menu.png" style="max-width: 46px;">
+            <img src="/styles/imagens/Menu.png" style="max-width: 46px;">
         </div>
         <div id="eptran">
             <h1>EPTRAN</h1>
         </div>
         <div id="logopref">
-            <img src="../visualEptranInicio/imagensEptranInicio/Logo Prefeitura.png" style="max-height: 46px;">
+            <img src="/styles/imagens/Logo Prefeitura.png" style="max-height: 46px;">
         </div>
     </section>
     </header>
