--- a/estruturas/login.html
+++ b/estruturas/login.html
@@ -2,9 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Login/visualLogin/geralLogin/styleLogin.css">
+    <link rel="stylesheet" href="/styles/login.css">
     <title>Atividade Login</title>
-    <script src="/scriptLogin/scriptLogin.js"></script>
+    <script src="/scripts/login.js"></script>
 </head>
 <body>
     <div>
@@ -14,7 +14,7 @@
             <div class="login-box">
                 <form>
                     <div id="foto">
-                        <img src="/Login/visualLogin/imagensLogin/cara.png" alt="">
+                        <img src="/styles/imagens/Cara.png" alt="">
                         <p id="login">LOGIN</p>
                     </div>
                     <div class="user-box">
