--- a/estruturas/cadastro.html
+++ b/estruturas/cadastro.html
@@ -18,7 +18,7 @@
                         <p id="cadastro">Cadastro</p>
                     </div>
                     <div class="user-box">
-                        <input type="password" name="name" required="name">
+                        <input type="text" name="name" required="name">
                         <label for="name"><b class="b">*</b>  Nome Completo</label>
                     </div><center>
                     <div class="date-box">
