--- a/estruturas/cadastro.html
+++ b/estruturas/cadastro.html
@@ -21,6 +21,10 @@
                     <input type="text" name="nome" required="nome">
                     <label for="nome"><b class="b">*</b>  Nome Completo</label>
                 </div><center>
+                    <div class="user-box">
+                        <input type="text" name="email" required="email">
+                        <label for="email"><b class="b">*</b> E-mail</label>
+                    </div><center>
                 <div class="date-box">
                     <input type="date" name="nascimento" required="nascimento">
                      <label for="nascimento"><b class="b">*</b>  Data de Nascimento</label>
