--- a/estruturas/login.html
+++ b/estruturas/login.html
@@ -30,10 +30,10 @@
                     </a></center>
                     <div class="ESS">
                         <div >
-                            <a link rel="stylesheet" href="" ><u>Esueceu sua senha?</u></a>
+                            <a link rel="stylesheet" href="/estruturas/esqueceuSenha.html" ><u>Esueceu sua senha?</u></a>
                         </div>
                         <div class="ESS">
-                            <a link rel="stylesheet" href="" ><u>Cadastre-se:</u></a>
+                            <a link rel="stylesheet" href="/estruturas/cadastro.html" ><u>Cadastre-se:</u></a>
                         </div>
                     </div>
                 </div>
