--- a/estruturas/inicio.html
+++ b/estruturas/inicio.html
@@ -22,9 +22,7 @@
     </header>
     <section id="linhainicio">
     <div id="int">
-            <p>
-                Início
-            </p>
+        <p> Início</p>
     </div>
     </section>
     <section>
