--- a/estruturas/inicio.html
+++ b/estruturas/inicio.html
@@ -28,7 +28,10 @@
     <section>
     <div id="title">
         <h1>
-            EDUCAÇÃO PÚBLICA AO TRÂNSITO
+            EDUCAÇÃO PÚBLICA<br>
+            <div id="title2">
+                AO TRÂNSITO
+            </div> 
         </h1>
     </div>
     </section>
