centralização do rodapé superior

--- a/estruturas/inicio.html
+++ b/estruturas/inicio.html
@@ -10,7 +10,7 @@
     <header>
     <section id="sec">
         <div id="menu">
-            <img src="/styles/imagens/Menu.png" style="max-width: 46px;">
+            <img src="/styles/imagens/Menu.png" style="max-height: 46px;">
         </div>
         <div id="eptran">
             <h1>EPTRAN</h1>
