--- a/estruturas/cadastro.html
+++ b/estruturas/cadastro.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/cadastro.css">
-    <title>Atividade Login</title>
+    <title>Cadastro</title>
     <script src="/scripts/cadastro.js"></script>
 </head>
 <body>
