--- a/estruturas/login.html
+++ b/estruturas/login.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/login.css">
-    <title>Atividade Login</title>
+    <title>Login</title>
     <script src="/scripts/login.js"></script>
 </head>
 <body>
