--- a/estruturas/inicio.html
+++ b/estruturas/inicio.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <!-- Este é o menu padrão para praticamente todas as paginas -->
     <section id="sec">
         <div id="menu">
             <img src="/styles/imagens/Menu.png" style="max-height: 46px;">
