Revisão no código, correção de alguns pequenos detalhes

--- a/estruturas/cadastro.html
+++ b/estruturas/cadastro.html
@@ -20,15 +20,15 @@
                 <div class="user-box">
                     <input type="text" name="nome" required="nome">
                     <label for="nome"><b class="b">*</b>  Nome Completo</label>
-                </div><center>
+                </div>
                     <div class="user-box">
                         <input type="text" name="email" required="email">
                         <label for="email"><b class="b">*</b> E-mail</label>
-                    </div><center>
+                    </div>
                 <div class="date-box">
                     <input type="date" name="nascimento" required="nascimento">
                      <label for="nascimento"><b class="b">*</b>  Data de Nascimento</label>
-                 </div><center>
+                 </div>
                 <div class="user-box">
                     <input type="text" name="matricula" required="matricula">
                     <label for="matricula"><b class="b">*</b> Matrícula</label>
@@ -37,11 +37,11 @@
                 <div class="user-box">
                     <input type="password" name="senha" required="senha">
                     <label for="senha"><b class="b">*</b>  Senha</label>
-                </div><center>
+                </div>
                 <div class="user-box">
                     <input type="password" name="confirmarSenha" required="confirmarSenha">
                     <label for="confirmarSenha"><b class="b">*</b>  Cofirmar Senha</label>
-                </div><center>
+                </div>
                 <button id="processa" type="button" onclick="validarFormulario()">ENTRAR</button>
             </form>
         </div>
