--- a/estruturas/esqueceuSenha.html
+++ b/estruturas/esqueceuSenha.html
@@ -20,7 +20,7 @@
                 <div class="user-box">
                     <input type="text" name="e-mail" required="e-mail">
                     <label for="e-mail">E-mail:</label>
-                </div><center>
+                </div>
                 <button>Cancelar</button>
                 <button>Enviar senha</button>
             </form>
