--- a/estruturas/login.html
+++ b/estruturas/login.html
@@ -24,10 +24,10 @@
                     <div class="user-box">
                     <input type="password" name="senha" required="senha">
                     <label for="senha">Senha</label>
-                    </div><center>
+                    </div>
                         <button id="processa" type="button" onclick="salvarDados()">ENTRAR</button>
                     <span></span>
-                    </a></center>
+                    </a>
                     <div class="ESS">
                         <div >
                             <a link rel="stylesheet" href="/estruturas/esqueceuSenha.html" ><u>Esueceu sua senha?</u></a>
