--- a/estruturas/inicio.html
+++ b/estruturas/inicio.html
@@ -5,23 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EPTRAN</title>
     <link rel="stylesheet" href="/styles/inicio.css">
+    <script src="../scripts/inicio.js"></script>
 </head>
 <body>
     <header>
         <!-- Este é o menu padrão para praticamente todas as paginas -->
     <section id="sec">
         <div id="menu">
-            <img src="/styles/imagens/Menu.png" style="max-height: 46px;">
+            <button class="openbtn" onclick="openNav()">&#9776;</button>
         </div>
         <div id="eptran">
             <h1>EPTRAN</h1>
         </div>
-        <div id="logopref">
+        <div id="logoPref">
             <img src="/styles/imagens/Logo Prefeitura.png" style="max-height: 46px;">
         </div>
     </section>
     </header>
-    <section id="linhainicio">
+    <section id="linhaInicio">
     <div id="int">
         <p>Início</p>
     </div>
@@ -30,6 +31,32 @@
     <div id="title">
         <h1>EDUCAÇÃO PÚBLICA AO TRÂNSITO</h1>
     </div>
+        <!-- Este é o sidebar padrão para praticamente todas as paginas -->
+    <div id="mySidebar" class="sidebar">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <button class="dropbtn" onclick="myFunction()">Séries Iniciais
+          </button>
+          <div class="dropdown-content" id="myDropdown">
+            <a href="#">Jogos</a>
+            <a href="#">Atividades</a>
+            <a href="#">Vídeos</a>
+          </div>
+          <button class="dropbtn" onclick="myFunction()">Séries Finais
+          </button>
+          <div class="dropdown-content" id="myDropdown">
+            <a href="#">Jogos</a>
+            <a href="#">Atividades</a>
+            <a href="#">Vídeos</a>
+          </div>
+          <button class="dropbtn" onclick="myFunction()">Ensino Médio
+          </button>
+          <div class="dropdown-content" id="myDropdown">
+            <a href="#">Jogos</a>
+            <a href="#">Atividades</a>
+            <a href="#">Vídeos</a>
+          </div>
+        <a href="#">deixar assim</a>
+      </div>
     </section>
 </body>
 </html>
