--- a/estruturas/esqueceuSenha.html
+++ b/estruturas/esqueceuSenha.html
@@ -13,6 +13,10 @@
         </div>
         <div class="login-box">
             <form action="" id="formulario" method="post" name="formulario">
+                <div class="darkmode">
+                    <button id="toggle-button" onclick="darkmode()">Dark Mode</button>
+                </div>
+                <div id="foto">
                 <div>
                     <p id="Trocar">Trocar a Senha</p>
                     <p id="texto">Identifique-se para receber um e-mail com as instruções e o link para criar uma nova senha.</p>
