--- a/estruturas/login.html
+++ b/estruturas/login.html
@@ -13,6 +13,9 @@
         </div>
             <div class="login-box">
                 <form>
+                    <div class="darkmode">
+                        <button id="toggle-button" onclick="darkmode()">Dark Mode</button>
+                    </div>
                     <div id="foto">
                         <img src="/styles/imagens/Cara.png" alt="">
                         <p id="login">LOGIN</p>
