alteração da logo nas telas de login e de cadastro

--- a/estruturas/login.html
+++ b/estruturas/login.html
@@ -9,7 +9,7 @@
 <body>
     <div>
         <div id="EPTRAN">
-            <p>EPTRAN</p>
+            <img src="../styles/imagens/Logos.png" alt="eptran" style="max-width: 70%;">
         </div>
             <div class="login-box">
                 <form>
