--- a/estruturas/inicio.html
+++ b/estruturas/inicio.html
@@ -1,62 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EPTRAN</title>
-    <link rel="stylesheet" href="/styles/inicio.css">
+    <link rel="stylesheet" href="/styles/inicio.css" />
     <script src="../scripts/inicio.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <!-- Este é o menu padrão para praticamente todas as paginas -->
-    <section id="sec">
+      <!-- Este é o menu padrão para praticamente todas as paginas -->
+      <section id="sec">
         <div id="menu">
-            <button class="openbtn" onclick="openNav()">&#9776;</button>
+          <button class="openbtn" onclick="openNav()">&#9776;</button>
         </div>
         <div id="eptran">
-            <h1>EPTRAN</h1>
+          <h1>EPTRAN</h1>
         </div>
         <div id="logoPref">
-            <img src="/styles/imagens/Logo Prefeitura.png" style="max-height: 46px;">
+          <img
+            src="/styles/imagens/Logo Prefeitura.png"
+            style="max-height: 46px"
+          />
         </div>
-    </section>
+      </section>
     </header>
     <section id="linhaInicio">
-    <div id="int">
+      <div id="int">
         <p>Início</p>
-    </div>
-    </section>
-    <section>
-    <div id="title">
-        <h1>EDUCAÇÃO PÚBLICA AO TRÂNSITO</h1>
-    </div>
-        <!-- Este é o sidebar padrão para praticamente todas as paginas -->
-    <div id="mySidebar" class="sidebar">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <button class="dropbtn" onclick="myFunction()">Séries Iniciais
-          </button>
-          <div class="dropdown-content" id="myDropdown">
-            <a href="#">Jogos</a>
-            <a href="#">Atividades</a>
-            <a href="#">Vídeos</a>
-          </div>
-          <button class="dropbtn" onclick="myFunction()">Séries Finais
-          </button>
-          <div class="dropdown-content" id="myDropdown">
-            <a href="#">Jogos</a>
-            <a href="#">Atividades</a>
-            <a href="#">Vídeos</a>
-          </div>
-          <button class="dropbtn" onclick="myFunction()">Ensino Médio
-          </button>
-          <div class="dropdown-content" id="myDropdown">
-            <a href="#">Jogos</a>
-            <a href="#">Atividades</a>
-            <a href="#">Vídeos</a>
-          </div>
-        <a href="#">deixar assim</a>
       </div>
     </section>
-</body>
+    <section>
+      <div id="title">
+        <h1>EDUCAÇÃO PÚBLICA AO TRÂNSITO</h1>
+      </div>
+      <!-- Este é o sidebar padrão para praticamente todas as paginas -->
+      <div id="mySidebar" class="sidebar">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+          >&times;</a
+        >
+        <button class="dropbtn" onclick="myFunction()">Séries Iniciais</button>
+        <div class="dropdown-content" id="myDropdown">
+          <a href="#">Jogos</a>
+          <a href="#">Atividades</a>
+          <a href="#">Vídeos</a>
+        </div>
+        <button class="dropbtn" onclick="myFunction()">Séries Finais</button>
+        <div class="dropdown-content" id="myDropdown">
+          <a href="#">Jogos</a>
+          <a href="#">Atividades</a>
+          <a href="#">Vídeos</a>
+        </div>
+        <button class="dropbtn" onclick="myFunction()">Ensino Médio</button>
+        <div class="dropdown-content" id="myDropdown">
+          <a href="#">Jogos</a>
+          <a href="#">Atividades</a>
+          <a href="#">Vídeos</a>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
